# Analytics

./: .gitignore  Dockerfile  TODO  aiosyslogd.toml  compose.yml  config.json  rsyslog.conf  test_data.sql
backend_aegis/: .gitignore  Cargo.toml  Dockerfile  Rocket.toml  config.json
backend_aegis/.sqlx/: query-1895b1f9f7f2d9512ad0998beac0c3dab1f5ea6662d84f3973186bb21997a454.json  query-1a1a9188b1c43c41895f059875eedcd72a823f6dc18ec974b03057c625f58248.json  query-2c23f2d72303c37cbe8754ae2cbde6f13b94ec2a4bd7b9d543ad325af02ae056.json  query-59d455b6383f70e1cd633e7a07dd5cfcc8b8a0a712c263be0cb85fbd33e49065.json  query-617b8f164ec081179c6770520d81b1faf6d302b0dc0ecd52873374f14cc3e2a4.json  query-88499e6eb6f06db74b7e0c8073b205a8eaf48f9c8969fe3e37a2eeb71b9457e2.json  query-8f3cad09bfe5499c77832bedf38cdb3ac410d708a7fe438babe88b282d38b911.json  query-ab52ea56419767f3f255d3c23edc3735b080313d395c72c78876ec78220f242f.json  query-bfe42974a6729bf1b491471efcceabadc7122b545fe0153d76ec372daedd2fd6.json  query-d0c05c2486b419b78ccc293a6e4a2070929f6d64267c2a16658ac4597f55ad7a.json  query-d7cdce3921c4e7ddc84c707acb9995e2c123f2a929f156d868af6bc2763fd9cf.json  query-e1e7a4cd1bfa783e6036b0e064584d13eca856f7ace250918daf32ed534f83a7.json  query-ff15802074f112c441898f8e3e6ca70bc580d9fd8ef27044f0a118164638f991.json
backend_aegis/ansible/env/: envvars  ssh_key
backend_aegis/ansible/inventory/: hosts
backend_aegis/ansible/project/: fact_gathering.yml
backend_aegis/prelude/: Config.py  create_aggregate_tasks.py  entrypoint.sh
backend_aegis/src/: config.rs  lib.rs  main.rs  misc.rs  types.rs
(+606 files in other folders)
