[package]
name = "backend_aegis"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.42"
csv = "1.4.0"
influxdb2 = "0.5.2"
influxdb2-structmap = "0.2.0"
lazy_static = "1.5.0"
log = "0.4.28"
pyo3 = "0.27.1"
regex = "1.12.2"
rocket = { version = "0.5.1", features = ["json"] }
rocket_ws = "0.1.1"
serde = { version = "1.0.228", features = ["derive"]}
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "macros", "uuid", "chrono"] }
surge-ping = "0.8.3"
syslog_loose = "0.23.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
ordered-float = "5.1.0"
